Tooltips now work in modals. Cannot avoid important on z-index

--- a/src/app/common/components/tooltip/Tooltips.less
+++ b/src/app/common/components/tooltip/Tooltips.less
@@ -1,6 +1,8 @@
 @import "../../Common.less";
 
+
 .tippy-popper {
+  z-index: 9999999999 !important;
   .tippy-tooltip {
     border-radius: 3px;
     padding: @half-spacing @spacing;
